[feat] set up tracked state (#5)
* [build] update serialization to cbor and replace embedded storage to h2

* [feat](tracked) set up tracked state with MVStore